Update version to 6.3.0; add configurable truthy condition values, improve condition handling, and refactor config messages
- **Versioning**:
  - Incremented plugin version to `6.3.0`.

- **Configurations**:
  - Introduced `truthyConditionValues` for customizable condition evaluation (`true`, `yes`, etc.) within conditions.
  - Updated `config.yml` and `custom_gui.yml_example` to reflect new `truthy-values` option with expanded documentation.
  - Added `%prefix%` support across configurable messages for easier customization.
  - Refactored config messages to include a global prefix for improved consistency and user experience.

- **Parsing/Validation**:
  - Enhanced slot validation in `Config`, issuing warnings for missing or invalid slots in custom items.
  - Improved condition logic in `GUIUtils` to match against `truthyConditionValues` for greater flexibility.
  - Added better error handling with warnings for unrecognized operators in conditional expressions.

- **Listeners**:
  - Updated `InventoryListener` to handle additional edge cases in inventory interactions (e.g., shift-click within custom GUIs).

- **Other Changes**:
  - Minor refactoring, improved readability with updated method calls and local variable usage.
  - Updated dependencies and plugin compatibility for plugin behavior consistency.